k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: chat-app
spec:
  serviceName: "mongodb"  
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: chatapp-mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "gp2"  
        resources:
          requests:
            storage: 5Gi
